--- a/testingllamacpp.ipynb
+++ b/testingllamacpp.ipynb
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "!CMAKE_ARGS=\"-DLLAMA_METAL=on\" FORCE_CMAKE=1 pip install llama-cpp-python"
+    "# !CMAKE_ARGS=\"-DLLAMA_METAL=on\" FORCE_CMAKE=1 pip install llama-cpp-python"
    ]
   },
   {
