--- a/Rag/tutorial.ipynb
+++ b/Rag/tutorial.ipynb
@@ -149,7 +149,11 @@
     "import dotenv\n",
     "\n",
     "dotenv.load_dotenv()\n",
-    "vectorstore = Chroma.from_documents(documents = all_splits, embedding = OpenAIEmbeddings())"
+    "vectorstore = Chroma.from_documents(\n",
+    "    documents = all_splits, \n",
+    "    embedding = OpenAIEmbeddings(), \n",
+    "    persist_directory = './chroma_db'\n",
+    ")"
    ]
   },
   {
@@ -201,13 +205,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tree of Thoughts (Yao et al. 2023) extends CoT by exploring multiple reasoning possibilities at each step. It first decomposes the problem into multiple thought steps and generates multiple thoughts per step, creating a tree structure. The search process can be BFS (breadth-first search) or DFS (depth-first search) with each state evaluated by a classifier (via a prompt) or majority vote.\n",
-      "Task decomposition can be done (1) by LLM with simple prompting like \"Steps for XYZ.\\n1.\", \"What are the subgoals for achieving XYZ?\", (2) by using task-specific instructions; e.g. \"Write a story outline.\" for writing a novel, or (3) with human inputs.\n"
+      "Fig. 1. Overview of a LLM-powered autonomous agent system.\n",
+      "Component One: Planning#\n",
+      "A complicated task usually involves many steps. An agent needs to know what they are and plan ahead.\n",
+      "Task Decomposition#\n",
+      "Chain of thought (CoT; Wei et al. 2022) has become a standard prompting technique for enhancing model performance on complex tasks. The model is instructed to “think step by step” to utilize more test-time computation to decompose hard tasks into smaller and simpler steps. CoT transforms big tasks into multiple manageable tasks and shed lights into an interpretation of the model’s thinking process.\n"
      ]
     }
    ],
    "source": [
-    "print(retrieved_docs[0].page_content)"
+    "print(retrieved_docs[1].page_content)"
    ]
   },
   {
