--- a/testingllamacpp.ipynb
+++ b/testingllamacpp.ipynb
@@ -1039,7 +1039,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs=text_splitter.split_documents(data)\n"
+    "docs=text_splitter.(data)\n",
+    "split_documents"
    ]
   },
   {
